#
# $Id$
#
# Copyright 2011, Juniper Networks, Inc.
# All rights reserved.
# This SOFTWARE is licensed under the LICENSE provided in the
# ../Copyright file. By downloading, installing, copying, or otherwise
# using the SOFTWARE, you agree to be bound by the terms of that
# LICENSE.

# CLEANFILES = lighttpd.conf

webdatadir = $(datadir)/juise/web

EXTRA_DIST = \
    Makefile.am \
    Makefile.in \
    lighttpd.conf.in \
    lighttpd-wrapper.sh

BASE_FILES = \
    bin/form2.js \
    bin/list-command-files.slax \
    bin/topology-ospf.slax \
    clira/app.js \
    clira/builtins.js \
    clira/clira.html \
    clira/clira.js \
    clira/clira.muxer.js \
    clira/clira.prefs.js \
    clira/clira.slax \
    clira/controllers.js \
    clira/db.php \
    clira/index.html \
    clira/models.js \
    clira/parser-test.html \
    clira/parser.js \
    clira/parser.output.js \
    clira/parser.test.js \
    clira/parser.types.js \
    clira/system/debug.js \
    clira/system/fancy.js \
    clira/system/history.js \
    clira/system/location.js \
    clira/system/on-device.js \
    clira/system/topology.js \
    clira/system/unit-test-commands.js \
    clira/templates/history.hbs \
    clira/templates/show-commands.hbs \
    clira/views.js \
    css/clira.css \
    favicon.ico \
    images/checkbox.png \
    images/clira_icon.png \
    images/empty.png \
    images/gear.png \
    images/icons/doubleSize.png \
    images/icons/juniper-favicon.ico \
    images/icons/loading.png \
    images/icons/size1p5.png \
    images/juise.png \
    images/logo.png \
    images/network.png \
    images/prefs-devices.png \
    images/prefs-general.png \
    images/prefs-groups.png \
    images/puck.png \
    jquery/jquery.dbgpr.js \
    jquery/jquery.mruPulldown.js

EXTERNAL_FILES = \
    external/d3/d3.v3.js \
    external/d3/d3.v3.min.js \
    external/ember/ember.js \
    external/ember-restless/ember-restless+extras.js \
    external/ember-restless/ember-restless.js \
    external/gmaps/gmaps.js \
    external/handlebars/handlebars.js \
    external/jqgrid/grid.locale-en.js \
    external/jqgrid/jquery.jqGrid.min.js \
    external/jqgrid/jquery.jqGrid.src.js \
    external/jqgrid/ui.jqgrid.css \
    external/jquery/jquery-1.9.1.js \
    external/jquery/jquery.js \
    external/jquery/jquery.min.js \
    external/jquery-checkbox/jquery.checkbox.css \
    external/jquery-checkbox/jquery.checkbox.js \
    external/jquery-checkbox/jquery.checkbox.min.js \
    external/jquery-qtip/imagesloaded.min.js \
    external/jquery-qtip/jquery.qtip.css \
    external/jquery-qtip/jquery.qtip.js \
    external/jquery-qtip/jquery.qtip.min.css \
    external/jquery-qtip/jquery.qtip.min.js \
    external/jquery-ui/jquery-ui-1.10.2.js \
    external/jquery-ui/jquery-ui.js \
    external/jquery-ui/jquery-ui.min.js \
    external/qunit/qunit-1.12.0.css \
    external/qunit/qunit-1.12.0.js

THEME_BLACK_TIE = \
    themes/black-tie/jquery-ui-black-tie.css \
    themes/black-tie/addons-black-tie.css \
    themes/black-tie/addons/html_bg.png \
    themes/black-tie/images/ui-bg_diagonals-thick_8_333333_40x40.png \
    themes/black-tie/images/ui-bg_flat_65_ffffff_40x100.png \
    themes/black-tie/images/ui-bg_glass_40_111111_1x400.png \
    themes/black-tie/images/ui-bg_glass_55_1c1c1c_1x400.png \
    themes/black-tie/images/ui-bg_highlight-hard_100_f9f9f9_1x100.png \
    themes/black-tie/images/ui-bg_highlight-hard_40_aaaaaa_1x100.png \
    themes/black-tie/images/ui-bg_highlight-soft_50_aaaaaa_1x100.png \
    themes/black-tie/images/ui-bg_inset-hard_45_cd0a0a_1x100.png \
    themes/black-tie/images/ui-bg_inset-hard_55_ffeb80_1x100.png \
    themes/black-tie/images/ui-icons_222222_256x240.png \
    themes/black-tie/images/ui-icons_4ca300_256x240.png \
    themes/black-tie/images/ui-icons_bbbbbb_256x240.png \
    themes/black-tie/images/ui-icons_ededed_256x240.png \
    themes/black-tie/images/ui-icons_ffcf29_256x240.png \
    themes/black-tie/images/ui-icons_ffffff_256x240.png

THEME_CLIRA = \
    themes/clira/addons-clira.css \
    themes/clira/images/ui-bg_diagonals-thick_8_333333_40x40.png \
    themes/clira/images/ui-bg_highlight-hard_100_f9f9f9_1x100.png \
    themes/clira/images/ui-bg_highlight-hard_40_aaaaaa_1x100.png \
    themes/clira/images/ui-icons_222222_256x240.png \
    themes/clira/images/ui-icons_4ca300_256x240.png \
    themes/clira/images/ui-icons_bbbbbb_256x240.png \
    themes/clira/images/ui-icons_ededed_256x240.png \
    themes/clira/images/ui-icons_ededed_hover_256x240.png \
    themes/clira/images/ui-icons_ffcf29_256x240.png \
    themes/clira/images/ui-icons_ffffff_256x240.png \
    themes/clira/jquery-ui-clira.css

THEME_DOT_LUV = \
    themes/dot-luv/jquery-ui-dot-luv.css \
    themes/dot-luv/addons-dot-luv.css \
    themes/dot-luv/addons/html_bg.png \
    themes/dot-luv/html_bg.png \
    themes/dot-luv/images/ui-bg_diagonals-thick_15_0b3e6f_40x40.png \
    themes/dot-luv/images/ui-bg_dots-medium_30_0b58a2_4x4.png \
    themes/dot-luv/images/ui-bg_dots-small_20_333333_2x2.png \
    themes/dot-luv/images/ui-bg_dots-small_30_a32d00_2x2.png \
    themes/dot-luv/images/ui-bg_dots-small_40_00498f_2x2.png \
    themes/dot-luv/images/ui-bg_flat_0_aaaaaa_40x100.png \
    themes/dot-luv/images/ui-bg_flat_40_292929_40x100.png \
    themes/dot-luv/images/ui-bg_gloss-wave_20_111111_500x100.png \
    themes/dot-luv/images/ui-icons_00498f_256x240.png \
    themes/dot-luv/images/ui-icons_98d2fb_256x240.png \
    themes/dot-luv/images/ui-icons_9ccdfc_256x240.png \
    themes/dot-luv/images/ui-icons_ffffff_256x240.png

THEME_EXCITE_BIKE = \
    themes/excite-bike/jquery-ui-excite-bike.css \
    themes/excite-bike/addons-excite-bike.css \
    themes/excite-bike/addons/ui-bg_diagonals-small_25_c5ddfc_40x40.png \
    themes/excite-bike/images/ui-bg_diagonals-small_25_c5ddfc_40x40.png \
    themes/excite-bike/images/ui-bg_diagonals-thick_20_e69700_40x40.png \
    themes/excite-bike/images/ui-bg_diagonals-thick_22_1484e6_40x40.png \
    themes/excite-bike/images/ui-bg_diagonals-thick_26_2293f7_40x40.png \
    themes/excite-bike/images/ui-bg_flat_0_e69700_40x100.png \
    themes/excite-bike/images/ui-bg_flat_0_e6b900_40x100.png \
    themes/excite-bike/images/ui-bg_highlight-soft_100_f9f9f9_1x100.png \
    themes/excite-bike/images/ui-bg_inset-hard_100_eeeeee_1x100.png \
    themes/excite-bike/images/ui-icons_0a82eb_256x240.png \
    themes/excite-bike/images/ui-icons_0b54d5_256x240.png \
    themes/excite-bike/images/ui-icons_5fa5e3_256x240.png \
    themes/excite-bike/images/ui-icons_fcdd4a_256x240.png \
    themes/excite-bike/images/ui-icons_ffffff_256x240.png

WEB_FILES = \
    ${BASE_FILES} \
    ${EXTERNAL_FILES} \
    ${THEME_BLACK_TIE} \
    ${THEME_CLIRA} \
    ${THEME_DOT_LUV} \
    ${THEME_EXCITE_BIKE}

nobase_dist_webdata_DATA = ${WEB_FILES}
nobase_dist_sysconf_DATA = \
    lighttpd.conf \
    lighttpd-wrapper.sh

EXTRA_DIST += ${WEB_FILES}

#INSTALL_WEB_FILES =  \
#    lighttpd.conf \
#    ${WEB_FILES}

#not-yet-install-exec-hook:
#	@echo "Installing Web Files ... "
#	@for file in ${INSTALL_WEB_FILES} ; do \
#		if [ -f $$file ]; then \
#			rfile=$$file ; \
#		else \
#			rfile=${srcdir}/$$file ; \
#		fi ; \
#		mdir=${JUISE_WEB_DIR}/`dirname $$file` ; \
#		mkdir -p $$mdir ; \
#		cp $$rfile $$mdir/ ; \
#        done

svnignore:
	svn propset svn:ignore -F ${srcdir}/.svnignore ${srcdir}
